fix - fixed duplicate awp payments, awp mappings issues